<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Challenge5Activity">

        <EditText
            android:id="@+id/edittext_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/type_a_site_url"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittext_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/type_a_location"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_open_website"
            app:layout_constraintTop_toBottomOf="@+id/button_open_website" />

        <EditText
            android:id="@+id/edittext_text_to_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/type_some_text_to_be_shared"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_open_location"
            app:layout_constraintTop_toBottomOf="@+id/button_open_location" />

        <Button
            android:id="@+id/button_open_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/open_website"
            app:layout_constraintStart_toStartOf="@+id/edittext_url"
            app:layout_constraintTop_toBottomOf="@+id/edittext_url" />

        <Button
            android:id="@+id/button_open_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/open_location"
            app:layout_constraintStart_toStartOf="@+id/edittext_location"
            app:layout_constraintTop_toBottomOf="@+id/edittext_location" />

        <Button
            android:id="@+id/button_share_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/share_text"
            app:layout_constraintStart_toStartOf="@+id/edittext_text_to_share"
            app:layout_constraintTop_toBottomOf="@+id/edittext_text_to_share" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>

