<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Challenge3Activity">

    <Button
        android:id="@+id/button_text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_one"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_text_two"
        app:layout_constraintEnd_toStartOf="@+id/button_text_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_two"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_text_three"
        app:layout_constraintEnd_toStartOf="@+id/button_text_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_text_one" />

    <Button
        android:id="@+id/button_text_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_text_two"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>